# note-test

./: pyproject.toml
Enotes_Management_System/: settings.py
