[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
kubernetes = "^30.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.poetry.group.test.dependencies]
djangorestframework@  = "^3.14"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
django = "^3.2"
channels = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
