[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[tool.poetry.group.cloud.dependencies]
openstacksdk = "^1.0"
kubernetes = "^26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
